<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/books_portrait"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <!-- Progress bar overlay; shown while progress -->
    <include layout="@layout/include_loading"/>
    <ImageView
        android:id="@+id/Logo"
        android:layout_width="match_parent"
        android:layout_height="229dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/logo_vertically"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="40dp" />

    <EditText
        android:id="@+id/EmailTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="@string/EmailHint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:minLines="1"
        android:singleLine="true"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="324dp" />

    <EditText
        android:id="@+id/PasswordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/PasswordHint"
        android:inputType="textPassword"
        android:singleLine="true"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="390dp" />

    <Button
        android:id="@+id/LoginBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="10dp"
        android:background="@color/color0"
        android:text="@string/LoginBtnTxt"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="464dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/OrForgetPswdTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/OrForgetPassword" />

        <Button
            android:id="@+id/OrForgetBtn"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/ForgetPassword"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/OrSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/OrSignUpTxt" />

        <Button
            android:id="@+id/OrSignUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/ForgetPassword"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

</LinearLayout>