<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/books_portrait"
    android:orientation="vertical"
    tools:context=".SignupActivity">
    !-- Progress bar overlay; shown while progress -->
    <include layout="@layout/include_loading"/>
    <ImageView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="166dp"
        app:srcCompat="@mipmap/logo_horizontally" />

    <TextView
        android:id="@+id/HeaderLabel"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/SignUpHeaderTxt" />

    <EditText
        android:id="@+id/UserNameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="@string/UsernameHint"
        android:singleLine="true" />

    <EditText
        android:id="@+id/EmailTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="@string/EmailHint"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <EditText
        android:id="@+id/PasswordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="@string/NewPasswordHint"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/ConfirmPasswordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="15dp"
        android:autoText="false"
        android:ems="10"
        android:hint="@string/ConfirmNewPasswordHint"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/SignupBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="10dp"
        android:background="@color/color0"
        android:text="@string/SignUpBtnTxt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/OrLoginLinkTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/OrLoginHere" />

        <Button
            android:id="@+id/OrLoginLinkBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text=" Login Here"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

</LinearLayout>