package com.example.geeksreads;

import android.support.test.rule.ActivityTestRule;

import org.junit.Rule;
import org.junit.Test;

import java.util.Random;

import CustomFunctions.APIs;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
import static android.support.test.espresso.action.ViewActions.typeText;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static org.junit.Assert.assertEquals;

public class SignupActivityTest {
    @Rule
    public ActivityTestRule<SignupActivity> menuActivityTestRule =
            new ActivityTestRule<>(SignupActivity.class, true, true);

    @Test
    /* Username less than 3 characters */
    public void Test_UsernameLessThanThreeChars() {
        onView(withId(R.id.UserNameTxt))
                .perform(typeText("Ab"), closeSoftKeyboard());
        onView(withId(R.id.EmailTxt))
                .perform(typeText("mahmoud_1@live.com"), closeSoftKeyboard());
        onView(withId(R.id.PasswordTxt))
                .perform(typeText("Mah1142019"), closeSoftKeyboard());
        onView(withId(R.id.ConfirmPasswordTxt))
                .perform(typeText("Mah1142019"), closeSoftKeyboard());

        onView(withId(R.id.SignupBtn)).perform(click());

        assertEquals("Username length should be 3 characters minimum and 50 characters maximum", SignupActivity.sForTest);
    }

    @Test
    /* Email is not valid */
    public void Test_UserEmailIsNotValid() {
        onView(withId(R.id.UserNameTxt))
                .perform(typeText("MahmoudMorsy"), closeSoftKeyboard());
        onView(withId(R.id.EmailTxt))
                .perform(typeText("mahmoud_1@live"), closeSoftKeyboard());
        onView(withId(R.id.PasswordTxt))
                .perform(typeText("Mah1142019"), closeSoftKeyboard());
        onView(withId(R.id.ConfirmPasswordTxt))
                .perform(typeText("Mah1142019"), closeSoftKeyboard());

        onView(withId(R.id.SignupBtn)).perform(click());

        assertEquals("Please enter a valid Email", SignupActivity.sForTest);
    }

    @Test
    /* Password is less than 6 characters */
    public void Test_UserEnteredPasswordLessThanSixChars() {
        onView(withId(R.id.UserNameTxt))
                .perform(typeText("MahmoudMorsy"), closeSoftKeyboard());
        onView(withId(R.id.EmailTxt))
                .perform(typeText("mahmoud_1@live.com"), closeSoftKeyboard());
        onView(withId(R.id.PasswordTxt))
                .perform(typeText("Mah11"), closeSoftKeyboard());
        onView(withId(R.id.ConfirmPasswordTxt))
                .perform(typeText("Mah11"), closeSoftKeyboard());

        onView(withId(R.id.SignupBtn)).perform(click());

        assertEquals("Password should be 6 characters or more", SignupActivity.sForTest);
    }

    @Test
    /* Password has no numbers */
    public void Test_UserEnteredPasswordWithoutNumbers() {
        onView(withId(R.id.UserNameTxt))
                .perform(typeText("MahmoudMorsy"), closeSoftKeyboard());
        onView(withId(R.id.EmailTxt))
                .perform(typeText("mahmoud_1@live.com"), closeSoftKeyboard());
        onView(withId(R.id.PasswordTxt))
                .perform(typeText("Mahmoud"), closeSoftKeyboard());
        onView(withId(R.id.ConfirmPasswordTxt))
                .perform(typeText("Mahmoud"), closeSoftKeyboard());

        onView(withId(R.id.SignupBtn)).perform(click());

        assertEquals("Password should contain numbers", SignupActivity.sForTest);
    }

    @Test
    /* Password has no lower case letters */
    public void Test_UserEnteredPasswordWithNoLowerCaseLetters() {
        onView(withId(R.id.UserNameTxt))
                .perform(typeText("MahmoudMorsy"), closeSoftKeyboard());
        onView(withId(R.id.EmailTxt))
                .perform(typeText("mahmoud_1@live.com"), closeSoftKeyboard());
        onView(withId(R.id.PasswordTxt))
                .perform(typeText("MAH1142019"), closeSoftKeyboard());
        onView(withId(R.id.ConfirmPasswordTxt))
                .perform(typeText("MAH1142019"), closeSoftKeyboard());

        onView(withId(R.id.SignupBtn)).perform(click());

        assertEquals("Password should contain lower case letters", SignupActivity.sForTest);
    }

    @Test
    /* Password has no upper case letters */
    public void Test_UserEnteredPasswordWithNoUpperCaseLetters() {
        onView(withId(R.id.UserNameTxt))
                .perform(typeText("MahmoudMorsy"), closeSoftKeyboard());
        onView(withId(R.id.EmailTxt))
                .perform(typeText("mahmoud_1@live.com"), closeSoftKeyboard());
        onView(withId(R.id.PasswordTxt))
                .perform(typeText("mah1142019"), closeSoftKeyboard());
        onView(withId(R.id.ConfirmPasswordTxt))
                .perform(typeText("mah1142019"), closeSoftKeyboard());

        onView(withId(R.id.SignupBtn)).perform(click());

        assertEquals("Password should contain upper case letters", SignupActivity.sForTest);
    }

    @Test
    /* Passwords don't match */
    public void Test_PasswordAndConfirmPasswordDidntMatch() {
        onView(withId(R.id.UserNameTxt))
                .perform(typeText("MahmoudMorsy"), closeSoftKeyboard());
        onView(withId(R.id.EmailTxt))
                .perform(typeText("mahmoud_1@live.com"), closeSoftKeyboard());
        onView(withId(R.id.PasswordTxt))
                .perform(typeText("mah1142019"), closeSoftKeyboard());
        onView(withId(R.id.ConfirmPasswordTxt))
                .perform(typeText("mah1142010"), closeSoftKeyboard());

        onView(withId(R.id.SignupBtn)).perform(click());

        assertEquals("Password should contain upper case letters", SignupActivity.sForTest);
    }

    @Test
    /* Creating account and Waiting Email Verification */
    public void Test_CreatingAccountAndWaitingEmailVerification() {
        int RandomNumber;
        onView(withId(R.id.UserNameTxt))
                .perform(typeText("MahmoudMorsy"), closeSoftKeyboard());
        if (APIs.MimicModeEnabled)
        {
            RandomNumber = 1;
            onView(withId(R.id.EmailTxt))
                    .perform(typeText("mahmoud_1@live.com"), closeSoftKeyboard());
        }
        else
        {
            RandomNumber = (new Random().nextInt(1000) * new Random().nextInt(1000));
            onView(withId(R.id.EmailTxt))
                    .perform(typeText("mahmoud_"+ String.valueOf(RandomNumber) +"@live.com"),
                            closeSoftKeyboard());
        }

        onView(withId(R.id.PasswordTxt))
                .perform(typeText("Mah1142019"), closeSoftKeyboard());
        onView(withId(R.id.ConfirmPasswordTxt))
                .perform(typeText("Mah1142019"), closeSoftKeyboard());

        onView(withId(R.id.SignupBtn)).perform(click());

        assertEquals("A verification email has been sent to mahmoud_"+String.valueOf(RandomNumber)+"@live.com.", SignupActivity.sForTest);
    }

    @Test
    /* Creating account but User is already registered */
    public void Test_UserAlreadyRegistered() {
        onView(withId(R.id.UserNameTxt))
                .perform(typeText("MahmoudMorsy"), closeSoftKeyboard());
        onView(withId(R.id.EmailTxt))
                .perform(typeText("mahmoud_2@live.com"), closeSoftKeyboard());
        onView(withId(R.id.PasswordTxt))
                .perform(typeText("Mah1142019"), closeSoftKeyboard());
        onView(withId(R.id.ConfirmPasswordTxt))
                .perform(typeText("Mah1142019"), closeSoftKeyboard());

        onView(withId(R.id.SignupBtn)).perform(click());

        assertEquals("User already registered.", SignupActivity.sForTest);
    }

    @Test
    /* Creating account and an error occurred */
    public void Test_UnexpectedErrorOccurred() {
        onView(withId(R.id.UserNameTxt))
                .perform(typeText("MahmoudMorsy"), closeSoftKeyboard());
        onView(withId(R.id.EmailTxt))
                .perform(typeText("mahmoud_3@live.com"), closeSoftKeyboard());
        onView(withId(R.id.PasswordTxt))
                .perform(typeText("Mah1142019"), closeSoftKeyboard());
        onView(withId(R.id.ConfirmPasswordTxt))
                .perform(typeText("Mah1142019"), closeSoftKeyboard());

        onView(withId(R.id.SignupBtn)).perform(click());
        if (!APIs.MimicModeEnabled) return;
        assertEquals("An error occurred!", SignupActivity.sForTest);
    }
}